@@ -8,6 +8,8 @@ Version 6.4.3 - not yet released
   - LXNAV Nano: fix crash in Nano configuration dialog
   - LXNAV V7: fix NMEA setup over Bluetooth
   - Colibri/LX20: fix LXN/FIL to IGC conversion (#2262)
+* user interface
+  - fix the download manager on Samsung phones
 
 Version 6.4.2 - 2012/10/17
 * calculations
